--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       flex-wrap: wrap;
       justify-content: center;
     }
+    .about {
+      margin: 2rem 0;
+      line-height: 1.6;
+    }
     .contact {
       text-align: center;
       font-size: 1.1rem;
@@ -73,11 +77,16 @@
 
   <div class="content">
     <div class="offer">
-      🎉 Get <strong>Free Eye Testing</strong> & <strong>20% OFF</strong> on All Frames!<br />
-      Visit us at <strong>Gokul Arcade, Adyar</strong> before the offer expires!
+      🎉 <strong>Free Eye Testing</strong> + <strong>20% OFF</strong> on All Purchases!<br />
+      Visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
     </div>
 
-    <h2>Explore Top Brands in Eyewear</h2>
+    <div class="about">
+      <p>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With over three decades of experience, we provide high-quality eye testing, lens fitting, and frame selection services.</p>
+      <p>We carry a curated range of branded frames including Ray-Ban, Tommy Hilfiger, Gucci, Fastrack, Vincent Chase, and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
+    </div>
+
+    <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
       <img src="https://images.ray-ban.com/is/image/RayBan/8056597721345__002.png" alt="Ray-Ban" />
       <img src="https://assets.tatacliq.com/medias/sys_master/images/34014831693854.jpg" alt="Tommy Hilfiger" />
@@ -87,9 +96,9 @@
     </div>
 
     <div class="contact">
-      📍 Gokul Arcade, Adyar, Chennai – <em>insert exact address here</em><br />
+      📍 Gokul Arcade, Adyar, Chennai – <em>exact address coming soon</em><br />
       📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopticians@gmail.com</a><br />
-      📞 <a href="tel:+919123456789">+91 91234 56789</a>
+      📞 <a href="tel:+919080009221">9080009221</a> (WhatsApp available)
     </div>
   </div>
 
