--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cheneye Opticians in Adyar offers a free eye test + 20% off on frames. 30+ years experience. Visit Gokul Arcade before offer ends." />
-  <title>Cheneye Opticians – Free Eye Test & 20% Off at Gokul Arcade</title>
+  <title>Cheneye Opticians – We have Free Eye Test & 20% Off at Gokul Arcade</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -72,33 +72,31 @@
 <body>
   <header>
     <h1>Cheneye Opticians</h1>
-    <p>Serving Adyar with 30+ Years of Trusted Eye Care</p>
+    <p>Serving Adyar with nearly 30 Years of Trusted Eye Care</p>
   </header>
 
   <div class="content">
     <div class="offer">
-      🎉 <strong>Free Eye Testing</strong> + <strong>20% OFF</strong> on All Purchases!<br />
-      Visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
+      🎉 <strong> We've got Free Eye Testing</strong> + <strong>20% OFF </strong> on All Purchases till July 12, 2025!<br />
+      Call us or simply walk in and visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
     </div>
 
     <div class="about">
-      <p>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With over three decades of experience, we provide high-quality eye testing, lens fitting, and frame selection services.</p>
-      <p>We carry a curated range of branded frames including Ray-Ban, Tommy Hilfiger, Gucci, Fastrack, Vincent Chase, and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
+      <p>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With nearly three decades of experience, we provide high-quality eye testing, frames, lens fitting, and contact lenses.</p>
+      <p>We carry a curated range of branded frames including Ray-Ban, Oakley, Vogue, Zeiss, Silhouette and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
     </div>
 
     <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
-      <img src="https://images.ray-ban.com/is/image/RayBan/8056597721345__002.png" alt="Ray-Ban" />
-      <img src="https://assets.tatacliq.com/medias/sys_master/images/34014831693854.jpg" alt="Tommy Hilfiger" />
-      <img src="https://www.lenskart.com/media/catalog/product/v/i/vincent-chase-vc-e14094-full-rim-eyeglasses_vincent-chase-vc-e14094_full-rim_eyeglasses_img_001.jpg" alt="Vincent Chase" />
-      <img src="https://cdn.shopify.com/s/files/1/0276/4200/8352/products/gucci1.jpg?v=1627301532" alt="Gucci" />
-      <img src="https://m.media-amazon.com/images/I/61+1LWh3ZyL._UX679_.jpg" alt="Fastrack" />
+      
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.jpg" alt="Ray-Ban" />
+      
     </div>
 
     <div class="contact">
-      📍 Gokul Arcade, Adyar, Chennai – <em>exact address coming soon</em><br />
-      📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopticians@gmail.com</a><br />
-      📞 <a href="tel:+919080009221">9080009221</a> (WhatsApp available)
+      📍 Cheneye Opticians, Basement, Gokul Arcade, Adyar, Chennai <br />
+      📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopt98@gmail.com</a><br />
+      📞 <a href="tel:+919080009221">9841155611</a> (WhatsApp available)
     </div>
   </div>
 
