--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
       
-      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.jpg" alt="Ray-Ban" />
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.png" alt="Ray-Ban" />
       
     </div>
 
