--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
       justify-content: center;
     }
     .about {
-      margin: 2rem 0;
-      line-height: 1.6;
-    }
+  background: #ffffff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  border: 1px solid #eee;
+  line-height: 1.7;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
+}
+
+.about h2 {
+  margin-top: 0;
+  color: #333;
+}
     .contact {
       text-align: center;
       font-size: 1.1rem;
