--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
       
-      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.png" alt="Ray-Ban" />
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.png" alt="Ray-Ban" style="width: 100%; max-width: 400px;" />
       
     </div>
 
