--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </div>
 
     <div class="contact">
+      <h2 style="text-align:center;"> Make sure to reach out to us right away! </h2>
       📍 Cheneye Opticians, Basement, Gokul Arcade, Adyar, Chennai <br />
       📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopt98@gmail.com</a><br />
       📞 <a href="tel:+919080009221">9841155611</a> (WhatsApp available)
