--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
     </div>
 
     <div class="about">
-      <p>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With nearly three decades of experience, we provide high-quality eye testing, frames, lens fitting, and contact lenses.</p>
-      <p>We carry a curated range of branded frames including Ray-Ban, Oakley, Vogue, Zeiss, Silhouette and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
+      <p><strong>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With nearly three decades of experience, we provide high-quality eye testing, frames, lens fitting, and contact lenses.</strong></p>
+      <p>We carry a curated range of branded frames including <strong>Ray-Ban, Oakley, Vogue, Zeiss, Silhouette</strong> and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
     </div>
 
     <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
       
       <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/rayban.png" alt="Ray-Ban" style="width: 100%; max-width: 400px;" />
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/oakley.png" alt="oakley" style="width: 100%; max-width: 400px;" />
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/silhouette.png" alt="silhouette" style="width: 100%; max-width: 400px;" />
+      <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/vogue.png" alt="vogue" style="width: 100%; max-width: 400px;" />
       
     </div>
 
