--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cheneye Opticians in Adyar offers a free eye test + 20% off on frames. 30+ years experience. Visit Gokul Arcade before offer ends." />
+    <img src="logo.png" alt="Cheneye Opticians Logo" class="logo" />
   <title>Cheneye Opticians – We have Free Eye Test & 20% Off at Gokul Arcade</title>
   <style>
     body {
