--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cheneye Opticians in Adyar offers a free eye test + 20% off on frames. 30+ years experience. Visit Gokul Arcade before offer ends." />
     
-  <title>Cheneye Opticians – We have Free Eye Test & 20% Off at Gokul Arcade</title>
+  <title>Cheneye Opticians – We have Free Eye Test & 20% Off at Gokul Arcade (Just show this ad in the store to claim the discount)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
