--- a/index.html
+++ b/index.html
@@ -85,9 +85,16 @@
     <p>Serving Adyar with nearly 30 Years of Trusted Eye Care</p>
   </header>
 
+  <div class="contact">
+      <h2 style="text-align:center;"> Make sure to reach out to us right away! </h2>
+      📍 Cheneye Opticians, Basement, Gokul Arcade, Adyar, Chennai <br />
+      📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopt98@gmail.com</a><br />
+      📞 <a href="tel:+919841155611">9841155611</a> (WhatsApp available)
+    </div>
+
   <div class="content">
     <div class="offer">
-      🎉 <strong> We've got Free Eye Testing</strong> + <strong>20% OFF </strong> on All Purchases till July 12, 2025!<br />
+      🎉 <strong> We've got Free Eye Testing</strong> + <strong>20% OFF </strong> on All Purchases till July 19, 2025!<br />
       Call us or simply walk in and visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
     </div>
 
