--- a/index.html
+++ b/index.html
@@ -97,14 +97,19 @@
       🎉 <strong> We've got Free Eye Testing</strong> + <strong>20% OFF </strong> on All Purchases till July 19, 2025!<br />
       Call us or simply walk in and visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
     </div>
+    <div>
+    <a href="" class="book-button">Book Appointment Now</a>
+    </div>
 
     <div class="about">
       <p><strong>Cheneye Opticians is a legacy optical store located in the heart of Adyar, Chennai. With nearly three decades of experience, we provide high-quality eye testing, frames, lens fitting, and contact lenses.</strong></p>
       <p>We carry a curated range of branded frames including <strong>Ray-Ban, Oakley, Vogue, Zeiss, Silhouette</strong> and more. Our commitment to personalized service and premium products has earned us a loyal customer base across generations.</p>
     </div>
 
+    <div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSchJ7ZNqxynlY0JpG6W-E1V779VAsHG1TNlw1Ykl2qGX6eZog/viewform?embedded=true" width="640" height="1481" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+    </div>
+    
     <h2 style="text-align:center;">Top Eyewear Brands We Stock</h2>
     <div class="brands">
       <img src="https://raw.githubusercontent.com/sarvesh120112/CHENEYE/main/logo.png" alt="logo" style="width: 100%; max-width: 400px;" />
