--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     h1 {
       margin-bottom: 0.5rem;
     }
+    .book-button {
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 14px;
+  background-color: #007BFF;
+  color: white;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.book-button:hover {
+  background-color: #0056b3;
+}
     .content {
       max-width: 800px;
       margin: 2rem auto;
@@ -98,7 +112,7 @@
       Call us or simply walk in and visit us soon at <strong>Gokul Arcade, Adyar</strong> before the offer ends.
     </div>
     <div>
-    <a href="" class="book-button">Book Appointment Now</a>
+    <a href="https://sarvesh120112.github.io/CHENEYE/appointment.html" class="book-button">Book Appointment Now</a>
     </div>
 
     <div class="about">
@@ -126,6 +140,9 @@
       📧 <a href="mailto:cheneyeopticians@gmail.com">cheneyeopt98@gmail.com</a><br />
       📞 <a href="tel:+919841155611">9841155611</a> (WhatsApp available)
     </div>
+  </div>
+  <div>
+    <a href="https://sarvesh120112.github.io/CHENEYE/appointment.html" class="book-button">Book Appointment Now</a>
   </div>
 
   <footer>
